cc_library(
    name = "task_queue",
    srcs = ["task_queue_base.cc"],
    hdrs = [
        "task_queue_base.h",
        "task_queue_factory.h",
    ],
    deps = [
        "//rtc_base:checks",
        "//rtc_base:macromagic",
        "//rtc_base/system:rtc_export",
        "//api/units:time_delta",
        "@com_google_absl//absl/base:config",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/functional:any_invocable",
        "@com_google_absl//absl/strings",
    ],
    visibility = ["//visibility:public"],
)