cc_library(
    name = "inline",
    srcs = [],
    hdrs = ["inline.h"],
    deps = [],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "rtc_export",
    srcs = [],
    hdrs = [
        "rtc_export.h",
        "rtc_export_template.h",
    ],
    deps = [],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "arch",
    srcs = [],
    hdrs = ["arch.h"],
    deps = [],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "no_unique_address",
    srcs = [],
    hdrs = ["no_unique_address.h"],
    deps = [],
    visibility = ["//visibility:public"],
)
