cc_library(
    name = "bounded_io",
    srcs = [],
    hdrs = [
        "bounded_byte_reader.h",
        "bounded_byte_writer.h",
    ],
    deps = [
        "//api:array_view",
        "//rtc_base:checks",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "tlv_trait",
    srcs = ["tlv_trait.cc"],
    hdrs = ["tlv_trait.h"],
    deps = [
        ":bounded_io",
        "//api:array_view",
        "//rtc_base:checks",
        "//rtc_base:logging",
        "@com_google_absl//absl/strings:strings",
        "@com_google_absl//absl/types:optional",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "data",
    srcs = [],
    hdrs = ["data.h"],
    deps = [
        "//rtc_base:checks",
        "//net/dcsctp/common:internal_types",
        "//net/dcsctp/public:types",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "crc32c",
    srcs = ["crc32c.cc"],
    hdrs = ["crc32c.h"],
    deps = [
        "//api:array_view",
        "//rtc_base:checks",
        "//net/crc32c",
    ],
)

cc_library(
    name = "parameter",
    srcs = [
        "parameter/add_incoming_streams_request_parameter.cc",
        "parameter/add_outgoing_streams_request_parameter.cc",
        "parameter/forward_tsn_supported_parameter.cc",
        "parameter/heartbeat_info_parameter.cc",
        "parameter/incoming_ssn_reset_request_parameter.cc",
        "parameter/outgoing_ssn_reset_request_parameter.cc",
        "parameter/parameter.cc",
        "parameter/reconfiguration_response_parameter.cc",
        "parameter/ssn_tsn_reset_request_parameter.cc",
        "parameter/state_cookie_parameter.cc",
        "parameter/supported_extensions_parameter.cc",
    ],
    hdrs = [
        "parameter/add_incoming_streams_request_parameter.h",
        "parameter/add_outgoing_streams_request_parameter.h",
        "parameter/forward_tsn_supported_parameter.h",
        "parameter/heartbeat_info_parameter.h",
        "parameter/incoming_ssn_reset_request_parameter.h",
        "parameter/outgoing_ssn_reset_request_parameter.h",
        "parameter/parameter.h",
        "parameter/reconfiguration_response_parameter.h",
        "parameter/ssn_tsn_reset_request_parameter.h",
        "parameter/state_cookie_parameter.h",
        "parameter/supported_extensions_parameter.h",
    ],
    deps = [
        ":bounded_io",
        ":data",
        ":tlv_trait",
        "//api:array_view",
        "//rtc_base:checks",
        "//rtc_base:logging",
        "//rtc_base:stringutils",
        "//net/dcsctp/common:internal_types",
        "//net/dcsctp/common:math",
        "//net/dcsctp/common:str_join",
        "//net/dcsctp/public:types",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:optional",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "error_cause",
    srcs = [
        "error_cause/cookie_received_while_shutting_down_cause.cc",
        "error_cause/error_cause.cc",
        "error_cause/invalid_mandatory_parameter_cause.cc",
        "error_cause/invalid_stream_identifier_cause.cc",
        "error_cause/missing_mandatory_parameter_cause.cc",
        "error_cause/no_user_data_cause.cc",
        "error_cause/out_of_resource_error_cause.cc",
        "error_cause/protocol_violation_cause.cc",
        "error_cause/restart_of_an_association_with_new_address_cause.cc",
        "error_cause/stale_cookie_error_cause.cc",
        "error_cause/unrecognized_chunk_type_cause.cc",
        "error_cause/unrecognized_parameter_cause.cc",
        "error_cause/unresolvable_address_cause.cc",
        "error_cause/user_initiated_abort_cause.cc",
    ],
    hdrs = [
        "error_cause/cookie_received_while_shutting_down_cause.h",
        "error_cause/error_cause.h",
        "error_cause/invalid_mandatory_parameter_cause.h",
        "error_cause/invalid_stream_identifier_cause.h",
        "error_cause/missing_mandatory_parameter_cause.h",
        "error_cause/no_user_data_cause.h",
        "error_cause/out_of_resource_error_cause.h",
        "error_cause/protocol_violation_cause.h",
        "error_cause/restart_of_an_association_with_new_address_cause.h",
        "error_cause/stale_cookie_error_cause.h",
        "error_cause/unrecognized_chunk_type_cause.h",
        "error_cause/unrecognized_parameter_cause.h",
        "error_cause/unresolvable_address_cause.h",
        "error_cause/user_initiated_abort_cause.h",
    ],
    deps = [
        ":bounded_io",
        ":data",
        ":parameter",
        ":tlv_trait",
        "//api:array_view",
        "//rtc_base:checks",
        "//rtc_base:logging",
        "//rtc_base:stringutils",
        "//net/dcsctp/common:internal_types",
        "//net/dcsctp/common:math",
        "//net/dcsctp/common:str_join",
        "//net/dcsctp/public:types",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:optional",
    ],
    visibility = ["//visibility:public"],
)


cc_library(
    name = "chunk",
    srcs = [
        "chunk/abort_chunk.cc",
        "chunk/chunk.cc",
        "chunk/cookie_ack_chunk.cc",
        "chunk/cookie_echo_chunk.cc",
        "chunk/data_chunk.cc",
        "chunk/error_chunk.cc",
        "chunk/forward_tsn_chunk.cc",
        "chunk/heartbeat_ack_chunk.cc",
        "chunk/heartbeat_request_chunk.cc",
        "chunk/idata_chunk.cc",
        "chunk/iforward_tsn_chunk.cc",
        "chunk/init_ack_chunk.cc",
        "chunk/init_chunk.cc",
        "chunk/reconfig_chunk.cc",
        "chunk/sack_chunk.cc",
        "chunk/shutdown_ack_chunk.cc",
        "chunk/shutdown_chunk.cc",
        "chunk/shutdown_complete_chunk.cc",
    ],
    hdrs = [
        "chunk/abort_chunk.h",
        "chunk/chunk.h",
        "chunk/cookie_ack_chunk.h",
        "chunk/cookie_echo_chunk.h",
        "chunk/data_chunk.h",
        "chunk/data_common.h",
        "chunk/error_chunk.h",
        "chunk/forward_tsn_chunk.h",
        "chunk/forward_tsn_common.h",
        "chunk/heartbeat_ack_chunk.h",
        "chunk/heartbeat_request_chunk.h",
        "chunk/idata_chunk.h",
        "chunk/iforward_tsn_chunk.h",
        "chunk/init_ack_chunk.h",
        "chunk/init_chunk.h",
        "chunk/reconfig_chunk.h",
        "chunk/sack_chunk.h",
        "chunk/shutdown_ack_chunk.h",
        "chunk/shutdown_chunk.h",
        "chunk/shutdown_complete_chunk.h",
    ],
    deps = [
        ":bounded_io",
        ":data",
        ":error_cause",
        ":parameter",
        ":tlv_trait",
        "//api:array_view",
        "//rtc_base:checks",
        "//rtc_base:logging",
        "//rtc_base:stringutils",
        "//net/dcsctp/common:math",
        "//net/dcsctp/common:str_join",
        "@com_google_absl//absl/algorithm:container",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:optional",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "chunk_validators",
    srcs = ["chunk_validators.cc"],
    hdrs = ["chunk_validators.h"],
    deps = [
        ":chunk",
        "//rtc_base:checks",
        "//rtc_base:logging",
    ],
    visibility = ["//visibility:public"],
)

cc_library(
    name = "sctp_packet",
    srcs = ["sctp_packet.cc"],
    hdrs = ["sctp_packet.h"],
    deps = [
        ":bounded_io",
        ":chunk",
        ":crc32c",
        "//api:array_view",
        "//rtc_base:checks",
        "//rtc_base:logging",
        "//rtc_base:stringutils",
        "//net/dcsctp/common:internal_types",
        "//net/dcsctp/common:math",
        "//net/dcsctp/public:types",
        "@com_google_absl//absl/memory:memory",
        "@com_google_absl//absl/types:optional",
    ],
    visibility = ["//visibility:public"],
)
