
cc_library(
    name = "context",
    srcs = [],
    hdrs = ["context.h"],
    deps = [
        "//net/dcsctp/common:internal_types",
        "//net/dcsctp/packet:sctp_packet",
        "//net/dcsctp/public:socket",
        "//net/dcsctp/public:types",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "heartbeat_handler",
    srcs = ["heartbeat_handler.cc"],
    hdrs = ["heartbeat_handler.h"],
    deps = [
        ":context",
        "//api:array_view",
        "//rtc_base:checks",
        "//rtc_base:logging",
        "//net/dcsctp/packet:bounded_io",
        "//net/dcsctp/packet:chunk",
        "//net/dcsctp/packet:parameter",
        "//net/dcsctp/packet:sctp_packet",
        "//net/dcsctp/public:socket",
        "//net/dcsctp/public:types",
        "//net/dcsctp/timer",
        "@com_google_absl//absl/functional:bind_front",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "stream_reset_handler",
    srcs = ["stream_reset_handler.cc"],
    hdrs = ["stream_reset_handler.h"],
    deps = [
        ":context",
        "//api:array_view",
        "//rtc_base:checks",
        "//rtc_base:logging",
        "//rtc_base/containers:flat_set",
        "//net/dcsctp/common:internal_types",
        "//net/dcsctp/common:str_join",
        "//net/dcsctp/packet:chunk",
        "//net/dcsctp/packet:parameter",
        "//net/dcsctp/packet:sctp_packet",
        "//net/dcsctp/packet:tlv_trait",
        "//net/dcsctp/public:socket",
        "//net/dcsctp/public:types",
        "//net/dcsctp/rx:data_tracker",
        "//net/dcsctp/rx:reassembly_queue",
        "//net/dcsctp/timer",
        "//net/dcsctp/tx:retransmission_queue",
        "@com_google_absl//absl/functional:bind_front",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "packet_sender",
    srcs = ["packet_sender.cc"],
    hdrs = ["packet_sender.h"],
    deps = [
        "//net/dcsctp/packet:sctp_packet",
        "//net/dcsctp/public:socket",
        "//net/dcsctp/public:types",
        "//net/dcsctp/timer",
    ],
)

cc_library(
    name = "transmission_control_block",
    srcs = ["transmission_control_block.cc"],
    hdrs = [
        "capabilities.h",
        "transmission_control_block.h",
    ],
    deps = [
        ":context",
        ":heartbeat_handler",
        ":packet_sender",
        ":stream_reset_handler",
        "//api:array_view",
        "//api/task_queue:task_queue",
        "//rtc_base:checks",
        "//rtc_base:logging",
        "//rtc_base:stringutils",
        "//net/dcsctp/common:sequence_numbers",
        "//net/dcsctp/packet:chunk",
        "//net/dcsctp/packet:sctp_packet",
        "//net/dcsctp/public:socket",
        "//net/dcsctp/public:types",
        "//net/dcsctp/rx:data_tracker",
        "//net/dcsctp/rx:reassembly_queue",
        "//net/dcsctp/timer",
        "//net/dcsctp/tx:retransmission_error_counter",
        "//net/dcsctp/tx:retransmission_queue",
        "//net/dcsctp/tx:retransmission_timeout",
        "//net/dcsctp/tx:send_queue",
        "@com_google_absl//absl/functional:bind_front",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:optional",
    ],
)

cc_library(
    name = "dcsctp_socket",
    srcs = [
        "callback_deferrer.cc",
        "dcsctp_socket.cc",
        "state_cookie.cc",
    ],
    hdrs = [
        "callback_deferrer.h",
        "dcsctp_socket.h",
        "state_cookie.h",
    ],
    deps = [
        ":context",
        ":heartbeat_handler",
        ":packet_sender",
        ":stream_reset_handler",
        ":transmission_control_block",
        "//api:array_view",
        "//api:make_ref_counted",
        "//api:refcountedbase",
        "//api:scoped_refptr",
        "//api:sequence_checker",
        "//api/task_queue:task_queue",
        "//rtc_base:checks",
        "//rtc_base:logging",
        "//rtc_base:stringutils",
        "//net/dcsctp/common:internal_types",
        "//net/dcsctp/packet:bounded_io",
        "//net/dcsctp/packet:chunk",
        "//net/dcsctp/packet:chunk_validators",
        "//net/dcsctp/packet:data",
        "//net/dcsctp/packet:error_cause",
        "//net/dcsctp/packet:parameter",
        "//net/dcsctp/packet:sctp_packet",
        "//net/dcsctp/packet:tlv_trait",
        "//net/dcsctp/public:socket",
        "//net/dcsctp/public:types",
        "//net/dcsctp/rx:data_tracker",
        "//net/dcsctp/rx:reassembly_queue",
        "//net/dcsctp/timer",
        "//net/dcsctp/tx:retransmission_error_counter",
        "//net/dcsctp/tx:retransmission_queue",
        "//net/dcsctp/tx:retransmission_timeout",
        "//net/dcsctp/tx:rr_send_queue",
        "//net/dcsctp/tx:send_queue",
        "@com_google_absl//absl/functional:bind_front",
        "@com_google_absl//absl/memory",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:optional",
    ],
    visibility = ["//visibility:public"],
)


